[ys2786] Implement two functions 1. Fetch Twitter Streaming, push all tweets to aws elastic search (ebs) 2. Provide search api for front end

--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
                 <input type="text" id="searchInput">
                 <input type="button" value="Search" onclick="searchKeyWord()">
                 <input type="button" value="Clear" onclick="initMap()"> </form>
-            <label> Number Of Twitters: <span id="numberOfTwitters"></label> </span> </div>
+            <label> Number Of Twitters: <span id="numberOfTwitters".></label> </span> </div>
         <p>
             <div id="map"></div>
             <script>
