--- a/web/index.html
+++ b/web/index.html
@@ -49,8 +49,8 @@
     <div id="map"></div>
     <script>
         var esUrl = window.location.href;
-        var locationMarkerArray = [];
-        var queryMarkerArray = [];
+        var locationMarkerArray = new Array();
+        var queryMarkerArray = new Array();
         var infoWindow;
         var maxCount = 10000;
         var currentCount = 0;
@@ -59,7 +59,7 @@
         function initMap() {
             clearSearchResult();
             //load data to array: locations, and plot
-            fetchTweet(locationMarkerArray);
+            fetchTweet();
             //init infowindow
             infoWindow = new google.maps.InfoWindow({
                 maxWidth: 350
@@ -67,34 +67,32 @@
             realTimeUpdate();
         }
         //call 'fetch' to obtain data
-        function fetchTweet(array) {
+        function fetchTweet() {
             $.getJSON(esUrl + "fetch", function (data) {
-                putIntoArray(array, data.hits.hits, "_source");
+                putIntoArray(data.hits.hits, "_source");
                 setNumberOfTweet();
-                console.log("result: length" + array.length);
+                console.log("fetch twitter locationMarkerArray: length" + locationMarkerArray.length);
             });
         }
         //real time update
         function realTimeUpdate() {
-            fetchTime = setInterval(update, 5000);
+            fetchTime = setInterval(update, 30000);
         }
 
         function update() {
-            console.log("update data....");
             fetchTweet(locationMarkerArray);
-            console.log("locationMarkerArray size: " + locationMarkerArray.length);
+            console.log("updating...  locationMarkerArray size: " + locationMarkerArray.length);
         }
 
-        function putIntoArray(array, data, field) {
+        function putIntoArray(data, field) {
             if (data.length == 0) {
                 //alert("sorry, there is no data.");
-                return array;
             }
             var tempArray = [];
             for (var i = 0; i < data.length; i++) {
                 var sourceInfo = data[i][field];
-                var lat = sourceInfo.location.latitude;
-                var lng = sourceInfo.location.longitude;
+                var lat = sourceInfo.location[0];
+                var lng = sourceInfo.location[1];
                 //other info
                 var text = sourceInfo.text;
                 var usernmae = sourceInfo.username;
@@ -126,21 +124,17 @@
                 attachInfoWindow(marker, location);
                 return marker;
             });
-            console.log("what is array:" + array.length);
-            array = array.concat(markers);
+            locationMarkerArray = locationMarkerArray.concat(markers);
             currentCount++;
             if (currentCount > maxCount) {
                 //stop timer
                 clearInterval(fetchTime);
             }
             //plot
-            addCluster(array);
-            return array;
+            drawMap();
         }
 
-        function addCluster(markerArray) {
-            // declare map
-            console.log("markerArray length:" + markerArray.length);
+        function drawQueryMap() {
             var map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 3
                 , center: {
@@ -148,21 +142,47 @@
                     , lng: 140.887
                 }
             });
-            for (var i = 0; i < markerArray.length; i++) {
-                markerArray[i].setMap(map);
+            for (var i = 0; i < queryMarkerArray.length; i++) {
+                queryMarkerArray[i].setMap(map);
             }
             // Add a marker clusterer to manage the markers.
-            var markerCluster = new MarkerClusterer(map, markerArray, {
+            var markerCluster = new MarkerClusterer(map, queryMarkerArray, {
+                imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'
+            });
+            //set bound
+            var bounds = new google.maps.LatLngBounds();
+            for (var i = 0; i < queryMarkerArray.length; i++) {
+                bounds.extend(queryMarkerArray[i].getPosition());
+            }
+            map.fitBounds(bounds);
+            //set searh result
+            document.getElementById("searchResult").innerHTML = "Matching result:" + queryMarkerArray.length;
+        }
+
+        function drawMap() {
+            // declare map
+            console.log("add cluster locationMarkerArraylength:" + locationMarkerArray.length);
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 3
+                , center: {
+                    lat: -28.024
+                    , lng: 140.887
+                }
+            });
+            for (var i = 0; i < locationMarkerArray.length; i++) {
+                locationMarkerArray[i].setMap(map);
+            }
+            // Add a marker clusterer to manage the markers.
+            var markerCluster = new MarkerClusterer(map, locationMarkerArray, {
                 imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'
             });
             console.log("set bound...");
             //set bound
             var bounds = new google.maps.LatLngBounds();
-            for (var i = 0; i < markerArray.length; i++) {
-                bounds.extend(markerArray[i].getPosition());
+            for (var i = 0; i < locationMarkerArray.length; i++) {
+                bounds.extend(locationMarkerArray[i].getPosition());
             }
             map.fitBounds(bounds);
-            //update total number of twitters
         }
         //add listener on each gps 
         function attachInfoWindow(marker, location) {
@@ -175,21 +195,74 @@
         }
 
         function searchKeyWord() {
+            //clear queryMarkerArray
+            queryMarkerArray = new Array();
             //stop timer
             clearInterval(fetchTime);
             //clear map
-            clearMarker(locationMarkerArray);
+            clearMarker();
             //search
             var keyword = document.getElementById('searchInput');
             $.getJSON(esUrl + "search?keyword=" + keyword.value, function (data) {
-                queryMarkerArray = putIntoArray(queryMarkerArray, data.hits.hits, "_source");
-                document.getElementById("searchResult").innerHTML = "Matching result:" + queryMarkerArray.length;
+                putIntoQueryArray(data.hits.hits, "_source");
             });
         }
 
-        function clearMarker(markerArray) {
-            for (var i = 0; i < markerArray.lastIndexOf; i++) {
-                markerArray[i].setMap(null);
+        function putIntoQueryArray(data, field) {
+            if (data.length == 0) {
+                alert("sorry, there is no data. go back to the origin");
+                resetMap();
+                return;
+            }
+            clearSearchResult();
+            var tempArray = [];
+            for (var i = 0; i < data.length; i++) {
+                var sourceInfo = data[i][field];
+                var lat = sourceInfo.location[0];
+                var lng = sourceInfo.location[1];
+                //other info
+                var text = sourceInfo.text;
+                var usernmae = sourceInfo.username;
+                var datetime = sourceInfo.date;
+                tempArray.push({
+                    "lat": lat
+                    , "lng": lng
+                    , "text": text
+                    , "username": usernmae
+                    , "datetime": datetime
+                });
+            }
+            console.log("search temp array length:" + tempArray.length);
+            // declare map
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 3
+                , center: {
+                    lat: -28.024
+                    , lng: 140.887
+                }
+            });
+            // Create an array of alphabetical characters used to label the markers.
+            var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+            var markers = tempArray.map(function (location, i) {
+                var marker = new google.maps.Marker({
+                    position: location
+                    , label: labels[i % labels.length]
+                , });
+                //add listener
+                attachInfoWindow(marker, location);
+                return marker;
+            });
+            console.log("query result length:" + markers.length);
+            queryMarkerArray = queryMarkerArray.concat(markers);
+            //plot
+            drawQueryMap();
+            //update search result
+            console.log("queryMarkerArray length:" + queryMarkerArray.length);
+        }
+        //clear marker
+        function clearMarker() {
+            for (var i = 0; i < locationMarkerArray.length; i++) {
+                locationMarkerArray[i].setMap(null);
             }
         }
         //set numbber of results
@@ -198,7 +271,7 @@
         }
         //clear
         function clearSearchResult() {
-            queryMarkerArray = [];
+            queryMarkerArray = new Array();
             document.getElementById("searchResult").innerHTML = "";
         }
         //reset to origin
@@ -214,9 +287,11 @@
                 }
             });
             console.log("reset locationMarkerArray length: " + locationMarkerArray.length);
-            for (var i = 0; i < locationMarkerArray.length; i++) {
-                locationMarkerArray[i].setMap(map);
-            }
+            //            for (var i = 0; i < locationMarkerArray.length; i++) {
+            //                locationMarkerArray[i].setMap(map);
+            //            }
+            //            
+            drawMap();
             realTimeUpdate();
         };
     </script>
