--- a/web/index.html
+++ b/web/index.html
@@ -33,12 +33,22 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a>Number Of Twitters:</a></li>
-                <li class="active"><a id="numberOfTwitters">250</a></li>
+                <li class="active"><a id="numberOfTwitters">100</a></li>
                 <li>
                     <a id="searchResult"></a>
                 </li>
             </ul>
             <form class="navbar-form navbar-right" role="search">
+                <input type="button" value="Drop Pin" onclick="dropPin()" class="btn btn-secondary">
+                <select class="form-control" id="distanceSel">
+                    <option disabled selected value> -- select a distance -- </option>
+                    <option value="1">1km</option>
+                    <option value="2">2km</option>
+                    <option value="3">3km</option>
+                    <option value="4">4km</option>
+                    <option value="5">5km</option>
+                </select>
+                <span>&nbsp;</span>
                 <input type="text" id="searchInput">
                 <input type="button" value="Search" onclick="searchKeyWord()" class="btn btn-secondary">
                 <input type="button" value="Reset" onclick="resetMap()" class="btn btn-secondary"> </form>
@@ -55,6 +65,7 @@
         var maxCount = 10000;
         var currentCount = 0;
         var fetchTime;
+        var pinMark;
 
         function initMap() {
             clearSearchResult();
@@ -69,9 +80,21 @@
         //call 'fetch' to obtain data
         function fetchTweet() {
             $.getJSON(esUrl + "fetch", function (data) {
+                if(data.length == 0){
+                    fetchNewest();
+                }else{
+                    putIntoArray(data.hits.hits, "_source");
+                    setNumberOfTweet();
+                    console.log("fetch twitter locationMarkerArray: length" + locationMarkerArray.length);
+                }
+            });
+        }
+        //
+        function fetchNewest(){
+            $.getJSON(esUrl + "fetch?all", function (data) {
                 putIntoArray(data.hits.hits, "_source");
                 setNumberOfTweet();
-                console.log("fetch twitter locationMarkerArray: length" + locationMarkerArray.length);
+                console.log("fetch newest twitter locationMarkerArray: length" + locationMarkerArray.length);
             });
         }
         //real time update
@@ -138,8 +161,8 @@
             var map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 3
                 , center: {
-                    lat: -28.024
-                    , lng: 140.887
+                    lat: 40.7128
+                    , lng: 74.0059
                 }
             });
             for (var i = 0; i < queryMarkerArray.length; i++) {
@@ -155,6 +178,7 @@
                 bounds.extend(queryMarkerArray[i].getPosition());
             }
             map.fitBounds(bounds);
+            map.setCenter(bounds.getCenter());
             //set searh result
             document.getElementById("searchResult").innerHTML = "Matching result:" + queryMarkerArray.length;
         }
@@ -214,6 +238,7 @@
                 resetMap();
                 return;
             }
+            alert(JSON.stringify(data));
             clearSearchResult();
             var tempArray = [];
             for (var i = 0; i < data.length; i++) {
@@ -293,7 +318,50 @@
             //            
             drawMap();
             realTimeUpdate();
-        };
+        }
+
+
+        //bonus
+        function dropPin(){
+            //stop timer first
+            clearInterval(fetchTime);
+            // declare map
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 10
+                , center: {
+                    lat: 40.7128
+                    , lng: -73.968285
+                }
+            });
+
+            pinMark = new google.maps.Marker({
+                draggable: true,
+                position: map.getCenter(),
+                map: map,
+                title: "Pin"
+            });
+            //add confirm window
+            pinMark.addListener('click', function () {
+                // InfoWindow content
+                infoWindow = new google.maps.InfoWindow({
+                    maxWidth: 350
+                });
+                var content = '<div>lat:'+pinMark.getPosition().lat()+"  lng: "+pinMark.getPosition().lng() +"<div>"+'<button class="btn btn-secondary" onClick="searchNearBy()">OK</button></div>';
+                infoWindow.setContent(content);
+                infoWindow.open(pinMark.get('map'), pinMark);
+            });
+        }
+
+        //search query
+        function searchNearBy(){
+            var distanceSel = document.getElementById("distanceSel");
+            var distance = $("#distanceSel").val();
+            alert(distance);
+            alert(pinMark.getPosition() + ", distance:"+distance);
+            $.getJSON(esUrl + "search?keyword=" + keyword.value, function (data) {
+                putIntoQueryArray(data.hits.hits, "_source");
+            });
+        }
     </script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
