[ys2786] Bug fix with location pin

--- a/web/index.html
+++ b/web/index.html
@@ -355,7 +355,7 @@
             infoWindow = new google.maps.InfoWindow({
                 maxWidth: 350
             });
-            var content = '<div><h4>Explore the World!</h4> <h5>Drag the pin to anywhere you interested</h5><button class="btn btn-secondary" onClick="searchNearBy()">Search Nearby</button></div>';
+            var content = '<div><h4>Explore the World!</h4><h5>Drag the pin to anywhere you like</h5><button class="btn btn-secondary" onClick="searchNearBy()">Search Nearby</button></div>';
             infoWindow.setContent(content);
             infoWindow.open(pinMark.get('map'), pinMark);
         });
